# FlightTracker

./: .gitignore  README.md  cpy_build.py  flightTracker.sublime-project  pyproject.toml  setup.py
flightTracker/: __main__.py  flight_bot.py  gui.py
flight_tracker/: __main__.py  airport_from_distance.py  country_to_airport.py  flight_bot.py  flight_record.py  gui.py  load_config.py
