[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "FlightTracker"
version = "0.1.0"
description = "A small tool to track the price of some flights"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { name = "David Algis", email = "david.algis@tutamail.com" }
]

dependencies = [
  "numpy>=1.21.0",
  "selenium>=4.0.0",
  "beautifulsoup4>=4.9.0",
  "pandas>=1.3.0",
  "win10toast>=0.9",
  "geopy>=2.4.1",
  "pystray>=0.19.5",
  "matplotlib>=3.7.0"
]

[project.urls]
Homepage   = "https://github.com/davidAlgis/FlightTracker"
Repository = "https://github.com/davidAlgis/FlightTracker"

[project.scripts]
flighttracker = "flight_tracker.__main__:main"

# Tell Hatchling exactly which package to include (repo root layout)
[tool.hatch.build.targets.wheel]
packages = ["flight_tracker"]

# Your linter config can stay as-is
[tool.flake8]
max-line-length = 85
exclude = ["tests/*", "Tests/*"]
